2003-04-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-simulation.c (update_log): Use gtk list view instead of
	text view.

2003-04-20  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* simulation.glade: Changed the default max time to 10 sec.

	* dialog-simulation.c (simulation_ok_clicked_cb): Implemented
	max-time spinbutton.

	* dialog-scenarios.c (scenarios_summary_clicked_cb): Result cells
	can now also be a list of cell ranges.

2003-04-19  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* shuffle.glade: Support only in-place shuffling.
	(dialog-shuffle.c): Related changes. Support Undo/Redo.

2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (scenarios_summary_clicked_cb): Check that
	the results entry contains a valid cell ref.

	* dialog-solver.c (solver_add_scenario): Fixed the
	scenario_add_new call.  Fix a memory leak.
	(cb_dialog_solve_clicked): Read the scenario name entry.
	
	* scenario-manager.glade: Added Result cells entry.

2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (solver_add_scenario): Wrote.
	(cb_dialog_solve_clicked, dialog_init): Added the handling of add
	scenario buttons and entry.

	* solver.glade: Added buttons and an entry for a scenario output.
	
	* tool-dialogs.h: Renamed scenario_buttons_t to scenario_state_t
	and added/moved scenario fields there.

	* dialog-scenarios.c (scenarios_cancel_clicked_cb): New cb to
	cancel changes made.
	(scenario_manager_free): Added to free memory allocations.

2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (scenario_add_ok_clicked_cb): Issue a warning
	if some of the changing cells contain a formula.

	* dialog-solver.c (cb_dialog_solve_clicked): Check that at least
	one constraint is defined.

2003-04-14  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (set_selection_state, dialog_scenarios): Fix
	the summary button sensitivity.
	(scenarios_summary_clicked_cb): New API for scenario_summary.
	